<resources>
    <string name ="URL_address">http://192.168.1.5:8080</string>
    <string name="app_name">Bank</string>
    <string name="title_activity_login">Zaloguj</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Nazwa użytkownika jest niepoprawna!</string>
    <string name="error_invalid_password">Hasło jest za krótkie!</string>
    <string name="error_incorrect_password">Niepoprawny login lub hasło!</string>
    <string name="error_field_required">To pole jest wymagane!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String menu activity -->
    <string name="operations">Operacje</string>
    <string name="bank_transfer">Wykonaj przelew</string>
    <string name="cards">Karty kredytowe</string>
    <string name="credits">Kredyty</string>
    <string name="investments">Lokaty</string>
    <string name="title_activity_operations">OperationsActivity</string>


    <!-- Operations activity -->
    <string name="action_settings">Ustawienie</string>
    <string name="section_format">Witam z sekcji nr: %1$d</string>
    <string name="tab_text_1_operations">Saldo</string>
    <string name="tab_text_2_operations">@string/operations</string>
    <string name="account_selection">Wybierz konto</string>

    <!-- For interface only spinner of accounts -->
    <string-array name="accounts_array">
        <item>Standard 12 0000 00000 00000 00000 00000</item>
        <item>Premium 32 0000 00000 00000 00000 00000</item>
        <item>Super Hiper 31 0000 00000 00000 00000 00000</item>
    </string-array>
    <string name="account_state">Stan konta</string>
    <string name="account_limit_day">Limit dzienny</string>
    <string name="account_limit_month">Limit miesięczny</string>

</resources>
